# 365collective-canvas-tools

./: .gitignore  README.md  pyproject.toml
src/: deploy_canvas.py  pa_to_fx.py
templates/: control_templates.json
