[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "canvas-tools"
version = "0.1.0"
description = "365 Collective canvas app delivery tools — .pa.yaml to .msapp via pac CLI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
]

[project.scripts]
deploy-canvas = "deploy_canvas:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
